[workspace]
members = [
    "crates/valuator-core",
    "crates/valuator-tracing",
    "services/valuation-service",
    "services/market-analyzer",
    "services/risk-assessor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["William <william@terrafusion.io>"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
