[package]
name = "market-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
valuator-core = { path = "../../crates/valuator-core" }
valuator-tracing = { path = "../../crates/valuator-tracing" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
